@@ -394,3 +394,4 @@ Issue #2171615 by Tim-Erwin, johnv: Fixed wrong parsing of hook_workflow results
 Issue #2019345 by johnv: Added back the type_map functions to main workflow module, to preserve compatibility with third-party modules.
 Issue #2170037 by johnv: Changed default widget to 'workflow' widget, instead of 'select'.
 Issue #2171615 by Tim-Erwin, johnv: Fixed wrong parsing of hook_workflow results. -2-
+Issue #2165349 by johnv: Added logging in hook_field_delete; added comments. Moved code of hook_node_delete to WorkflowItem.php
